Changed position and alignment of legal section and removed shitty 'card' class from FAQ to make the alignments correct

--- a/style.css
+++ b/style.css
@@ -305,6 +305,7 @@ hr.colored {
 
 .wrap {
     width: 100%;
+    margin-top: 150px;
     display: flex;
     justify-content: flex-end;
 }
@@ -723,7 +724,7 @@ hr.colored {
 /*Faq section style*/
 
 .faq-wrapper {
-    width: 80%;
+    width: 73%;
     margin: 0px auto;
 }
 
